@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2017-09-17 r73297) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-09-28 r73373) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -7848,6 +7848,20 @@ AIC: 27.032
 
 Number of Fisher Scoring iterations: 3
 
+> ## Aliased ("S"ingular) -> 1 NA coefficient
+> (fS <- glm(lot2 ~ log(u) + log(u^2), data = clotting, family = Gamma))
+
+Call:  glm(formula = lot2 ~ log(u) + log(u^2), family = Gamma, data = clotting)
+
+Coefficients:
+(Intercept)       log(u)     log(u^2)  
+   -0.02391      0.02360           NA  
+
+Degrees of Freedom: 8 Total (i.e. Null);  7 Residual
+Null Deviance:	    3.119 
+Residual Deviance: 0.01267 	AIC: 27.03
+> tools::assertError(update(fS, singular.ok=FALSE), verbose=interactive())
+> ## -> .. "singular fit encountered"
 > 
 > ## Not run: 
 > ##D ## for an example of the use of a terms object as a formula
